# evaltor

./: .gitignore  BoxDockerfile  Cargo.toml  Dockerfile  LICENSE  README.md  bench.toml  plot.py
examples/: nuXmv.toml  rIC3.toml
result/: abc-pdr-08-31-16-20  abc-pdr-09-01-13-00  abc-pdr-ctp-09-07-21-08  abc-pdr-ctp-hwmcc17-host0-09-07-21-08  abc-pdr-hwmcc-appr-09-18-12-23  abcpdr-hwmcc17-09-10-16-13  abcpdr-hwmcc17-09-25-16-34  abcpdr-hwmcc17-09-26-10-58  abcpdrdd-hwmcc17-09-25-19-43  abcpdrdd-hwmcc17-09-25-22-50  abcpdrdd-hwmcc17-09-26-07-50  ic3ref-dctg-hwmcc-appr-09-22-19-19  ic3ref-hwmcc-appr-09-19-10-16  myic3-09-10-01-57  myic3-cav23-hwmcc17-host1-09-12-13-53  myic3-cav23-hwmcc17-host1-09-13-08-14  myic3-ctp-hwmcc20-host1-09-11-20-03  myic3-ctp-ml-09-09-23-13  myic3-dctg-hwmcc-appr-09-20-18-02  myic3-dctg-hwmcc-appr-09-21-09-38  myic3-dctg-hwmcc-appr-09-21-13-00  myic3-dctg-hwmcc-appr-09-21-15-17  myic3-dctg-hwmcc17-09-22-07-36  myic3-dctg-hwmcc17-host1-09-13-14-36  myic3-dd-dctg-hwmcc-appr-09-22-18-30  myic3-dd-hwmc-appr-09-21-09-12  myic3-dd-hwmcc-appr-09-20-21-08  myic3-dd-hwmcc-appr-09-21-10-49  myic3-dd-hwmcc-appr-09-21-21-09  myic3-dd-hwmcc-appr-09-22-13-48  myic3-dd-hwmcc17-09-21-21-50  myic3-hwmcc-appr-09-18-09-58  myic3-hwmcc-appr-09-19-21-15  myic3-hwmcc-appr-09-22-13-22  myic3-hwmcc17-host1-09-12-17-00  myic3-hwmcc20-host1-09-11-15-30  myic3-hwmcc_appr-11-06-16-16  myic3-ml-09-09-22-38  myic3-newdd-09-21-12-16  myic3-newdd-09-21-15-48  (+12 more)
src/: bench.rs  lib.rs  main.rs  options.rs  worker.rs
src/bench/: filter.rs  fuzz.rs  mod.rs
src/evaluatees/: abc.rs  abcpdr.rs  avr.rs  avy.rs  cadical.rs  camical.rs  car.rs  (+13 more)
utils/: analyze.py  best.py  evaluatee.py  filter.py  main.py  merge.py  plot.py  scatter.py
