[package]
name = "evaluator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.28"
indicatif = "0.17.7"
libc = "0.2.147"
nix = { version = "0.27.1", features = ["signal"] }
num_cpus = "1.16.0"
process_control = "4.0.3"
