[package]
name = "evaltor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = "0.18.1"
bytes = "1.9.0"
chrono = "0.4.28"
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
indicatif = "0.17.7"
libc = "0.2.147"
nix = { version = "0.27.1", features = ["signal"] }
num_cpus = "1.16.0"
rand = "0.8.5"
regex = "1.10.6"
serde = "1.0.217"
serde_json = "1.0.137"
tempfile = "3.15.0"
tokio = { version = "1.43.0", features = ["full"] }
